--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Read .nvmrc
         id: nvm
-        run: echo "::set-output name=NODE_VERSION::$(cat .nvmrc)" # Read Node version from .nvmrc
+        run: echo "NODE_VERSION=$(cat .nvmrc)" >> $GITHUB_OUTPUT # Read Node version from .nvmrc
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
