--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Sonoria",
   "version": "1.0.0",
   "minAppVersion": "1.5.0",
-  "description": "We believe the most natural way to interact with your notes is by using your voice. Sonoria lets you speak a question and hear your vault answer—ideas flow, hands stay free. It listens, thinks with the context you choose, then provide its insight with beautiful voice, weaving capture and conversation into a single, effortless rhythm.",
+  "description": "Voice-powered AI conversations with your notes. Speak questions and hear intelligent responses from your vault using natural voice interaction and advanced AI reasoning.",
   "author": "Philips F",
   "authorUrl": "https://github.com/Kratos0080",
   "isDesktopOnly": true
